# icl-bot

./: .gitignore  MODULE.bazel  README.md  WORKSPACE  requirements.txt
bot/: BUILD  inhouse_bot.py
protos/: BUILD  inhouse.proto
server/: BUILD  game_manager.py  inhouse.py  rater.py  riot_client.py
